alignment fix for Projects header paragraph

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -11,6 +11,7 @@
 
   header, section, summary, header p {
     max-width: 1200px;
+    margin: 0 auto;
   }
 
   h1 {
